templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: friendly-app-service
spec:
  type: ClusterIP
  selector:
    app: friendly-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
